tried changing map height from vh to % to see if fix mobile clipping

--- a/src/styles/MapContainer.scss
+++ b/src/styles/MapContainer.scss
@@ -8,5 +8,6 @@
 @media screen and (min-width: 320px) and (max-width: 1024px) {
   .map {
     align-items: flex-end;
+    height: 100%;
   }
 }
